apps/my-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: 217340894050.dkr.ecr.us-east-1.amazonaws.com/my-app:1.0.0
        ports:
        - containerPort: 8080
